--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "decode": "^0.3.0",
+    "gibber.audio.lib": "^0.7.7",
+    "gibber.core.lib": "^0.2.0",
     "jwt-decode": "^2.2.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
