--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "gibber.audio.lib": "^0.7.7",
     "gibber.core.lib": "^0.2.0",
     "jwt-decode": "^2.2.0",
+    "midiconvert": "^0.4.7",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "react": "^16.8.6",
@@ -18,7 +19,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "semantic": "0.0.1",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "tone": "^13.4.9"
   },
   "scripts": {
     "start": "react-scripts start",
