--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "jwt-decode": "^2.2.0",
     "midiconvert": "^0.4.7",
     "morgan": "^1.9.1",
+    "p5": "^0.8.0",
     "passport": "^0.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-p5-wrapper": "^2.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
