--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
     "react-script": "^2.0.5",
     "semantic-ui-css": "^2.4.1",
     "sequelize": "^5.8.7"
