--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "p5": "^0.8.0",
     "passport": "^0.4.0",
     "react": "^16.8.6",
+    "react-compound-slider": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-p5-wrapper": "^2.0.0",
     "react-router": "^5.0.0",
