--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "npm run build",
     "server": "nodemon server.js",
     "db:reset": "node seed.js",
     "db:fresh": "dropdb --if-exists -e webmusic_db && createdb -e webmusic_db && node resetDb.js && node seed.js"
