--- a/package.json
+++ b/package.json
@@ -22,21 +22,22 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.11.0",
+    "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
     "react-script": "^2.0.5",
     "semantic-ui-css": "^2.4.1",
-    "sequelize": "^5.8.7"
+    "sequelize": "^5.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
